--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="home-inner container">
         <div class="row">
           <div class="col-lg-8 d-none d-lg-block">
-            <h1 class="dislpay-4">Build <strong>social profiles</strong> and gain revenue <strong>profits</strong>
+            <h1 class="dislpay-4">Text about what your company does
             </h1>
             <div class="d-flex">
               <div class="p-4 align-self-start">
